Implementing conditions for saving or not saving commands and adding two methods Exists and Any to IRepository and add method fail to resource file

--- a/Shared/Resource.resx
+++ b/Shared/Resource.resx
@@ -138,4 +138,7 @@
   <data name="UnAuthorized" xml:space="preserve">
     <value>UnAuthorized Error</value>
   </data>
+  <data name="Fail" xml:space="preserve">
+    <value>Operation was fail</value>
+  </data>
 </root>
