PCS-13 <Refactor: Add Exeption MiddleWare TO Shared Folder>
Custom MiddleWare For Customize Exception Responses and its configs

--- a/Shared/Resource.resx
+++ b/Shared/Resource.resx
@@ -138,4 +138,7 @@
   <data name="UnAuthorized" xml:space="preserve">
     <value>UnAuthorized Error</value>
   </data>
+  <data name="NoRecords" xml:space="preserve">
+    <value>No records found.</value>
+  </data>
 </root>
